RESOLVED FIXED271428
[IFC][Partial layout] ASSERT_NOT_REACHED in handleEnterExitBidiContext with inconsistent InlineBoxStart/End pairs
https://bugs.webkit.org/show_bug.cgi?id=271428
Summary [IFC][Partial layout] ASSERT_NOT_REACHED in handleEnterExitBidiContext with i...
alan
Reported 2024-03-21 17:07:47 PDT
Attachments
Patch (3.87 KB, patch)
2024-03-22 19:16 PDT, alan
no flags
[fast-cq]Patch (4.19 KB, patch)
2024-03-25 13:02 PDT, alan
no flags
alan
Comment 1 2024-03-22 19:16:59 PDT
alan
Comment 2 2024-03-25 06:02:41 PDT
Created attachment 470589 [details] [fast-cq]Patch
EWS
Comment 3 2024-03-25 08:15:44 PDT
Committed 276625@main (5ce30e754d8c): <https://commits.webkit.org/276625@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470589 [details].
Note You need to log in before you can comment on or make changes to this bug.