[IFC][Partial layout] ASSERT_NOT_REACHED in handleEnterExitBidiContext with inconsistent InlineBoxStart/End pairs https://bugs.webkit.org/show_bug.cgi?id=271428 <rdar://125202336>

Reviewed by Antti Koivisto.

Partial layout triggered by pagination may initiate incremental inline item (re)building on non-yet-supported content.
Let's just do full rebuild for now.

* LayoutTests/fast/text/partial-layout-with-pagination-and-widow-expected.txt: Added.
* LayoutTests/fast/text/partial-layout-with-pagination-and-widow.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::rebuildInlineItemListIfNeeded):

Canonical link: https://commits.webkit.org/276625@main